# pdf_chat_cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml
src/: ai_pdf_reader.py  main.py
