[tool.poetry]
name = "dioptra coding exercise"
version = "0.1.0"
description = ""
authors = ["nh916"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
mypy = "^1.20.2"
pre-commit = "^4.6.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
